fix line gap

--- a/Scss/_mixins.scss
+++ b/Scss/_mixins.scss
@@ -10,7 +10,7 @@
   position: absolute;
   left: 50%;
   width: 1px;
-  height: calc(8vh + 1px);
+  height: calc(8vh + 2px);
   background: $primary_color;
 }
 
